<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/server_row"
              android:orientation="vertical"
              android:baselineAligned="false"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content">
    <TextView
            android:id="@+id/urlAddress"
            android:text="@string/websiteUrl"
            android:textColor="#494646"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:padding="3dp"/>
    <TextView
            android:id="@+id/urlAddressActual"
            android:textColor="#494646"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:padding="3dp"/>
    <TextView
            android:id="@+id/apiKeyList"
            android:text="@string/apiString"
            android:textColor="#494646"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:padding="3dp"/>
    <TextView
            android:id="@+id/apiKeyActual"
            android:textColor="#494646"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:padding="3dp"/>
    <TextView
            android:id="@+id/userIDList"
            android:text="@string/userID"
            android:textColor="#494646"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:padding="3dp"/>
    <TextView
            android:id="@+id/userIDActual"
            android:textColor="#494646"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:padding="3dp"/>
</LinearLayout>